# openvpn-manager

./: Cargo.toml  LICENSE  README.md  _config.yml  index.md
.github/workflows/: RustCI.yml  rust-cd.yml  rust-ci-cd.yml  rust-ci.yml
src/: cli.rs  main.rs  util.rs
src/command/: mod.rs  myip.rs  v2.rs  v3.rs
src/vpn/: v2.rs  v3.rs
