[package]
name = "openvpn_manager"
version = "0.1.0"
edition = "2024"

description = "Command-line tool to manage OpenVPN 2.x and OpenVPN 3 sessions (start/stop, with more commands planned)."
homepage = "https://github.com/neiesc/openvpn_manager"
repository = "https://github.com/neiesc/openvpn_manager"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
