[package]
name = "openvpn-manager"
version = "0.1.5"
edition = "2024"

description = "Command-line tool to manage OpenVPN 2.x and OpenVPN 3.x (start/stop VPN and more commands)."
homepage = "https://neiesc.github.io/openvpn-manager"
repository = "https://github.com/neiesc/openvpn-manager"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
anyhow = "1.0"
rpassword = "7.4.0"
